compiler/testData/checkerWithErrorTypes/quick/InnerClassClassObject.jet
// http://youtrack.jetbrains.net/issue/KT-449

class A {
    class B {
        <!CLASS_OBJECT_NOT_ALLOWED!>class object { }<!>
    }
}
